--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Zhiyin's Homepage</title>
+    <title>Zhiyin's Intro</title>
     <meta name="author" content="Zhiyin Tan">
-    <meta name="description" content="Personal knowledge record fairyland: natural language processing(nlp), animation, thoughts">
+    <meta name="description" content="Personal fairyland: animation, thoughts">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
@@ -12,13 +12,13 @@
     <meta property="og:title" content="Zhiyin's Fairyland" />
     <meta property="og:type" content="website" />    
 
-    <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
+    <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js" defer></script>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js" defer></script>
   </head>
 
-  <body class="site-home">
+  <body class="site-ab">
     <header class="site-home-header">
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
@@ -40,7 +40,7 @@
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
@@ -48,29 +48,22 @@
     </header>
 
     <div class="container">
-        <main class="site-home-main">
-            <div id="start" class="site-home-content">
-                <div class="namecard">            
-                    <h1 class="site-title"> Zhiyin Tan </h1>
-                    <p> Written as <span lang="ch">谭芷茵</span> </p>
-                    <p> Pronounced close to "Ginn Tan" </p>
-                    
-                </div>
-                <div class="intro">  
-                    <p> I'm a M.Sc. student in 
-                        <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
-                        at 
-                        <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany,
-                        focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong>.
-                        Currently, I am working on ...
-                    </p>
-                </div>
+        <main class="site-ab-main">
+            <div id="start" class="site-ab-content">          
+                <h1 class="site-title"> About Me </h1>
+                <p>My resume is available 
+                    <a href="https://www.visualcv.com/zhiyin_cv/"
+                    title="Curriculum Vitae">here</a>
+                </p>
+                <p> . </p>
+                <p> . </p>
+                <p> . </p>
             </div>
             <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                 <a href="#start">
-                    <img class="to-top" src="../pic/top-arrow_square.ico">
+                    <img class="to-top" src="./pic/top-arrow_square.ico">
                 </a>
-            </div>      
+            </div>
         </main>
         
         <footer class="site-home-footer">
@@ -79,19 +72,19 @@
                 <ul class="footer-contact">
                     <li class="contact-email">
                         <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                        <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
+                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
                         <p class="text-email">  Email </p> 
                         </a>
                     </li>
                     <li class="contact-twitter">
                         <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                        <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
                         <p class="text-twitter"> Twitter </p>
                         </a>
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
+                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
@@ -99,6 +92,8 @@
                 <p></p>
             </div>
         </footer>
-    </div> 
+    </div>
+
   </body>
 </html>
+
