--- a/fairyland.html
+++ b/fairyland.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Zhiyin's Intro</title>
+    <title>Zhiyin's Fairyland</title>
     <meta name="author" content="Zhiyin Tan">
     <meta name="description" content="Personal fairyland: animation, thoughts">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,16 +14,16 @@
 
     <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js" defer></script>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js" defer></script>
   </head>
 
-  <body class="site-ab">
+  <body class="site-fl">
     <header class="site-home-header">
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
                 <a href="index.html" class="menu">
-                    <img class="logo" src="../pic/logo.ico">
+                    <img class="logo" src="./pic/logo.ico">
                 </a>
             </div>
             <ul class="nav" role="menu">
@@ -40,7 +40,7 @@
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
@@ -48,20 +48,14 @@
     </header>
 
     <div class="container">
-        <main class="site-ab-main">
-            <div id="start" class="site-ab-content">          
-                <h1 class="site-title"> About Me </h1>
-                <p>My resume is available 
-                    <a href="https://www.visualcv.com/zhiyin_cv/"
-                    title="Curriculum Vitae">here</a>
-                </p>
-                <p> . </p>
-                <p> . </p>
-                <p> . </p>
+        <main class="site-fl-main">
+            <div id="start" class="site-fl-content">          
+                <h1 class="site-title"> Fairyland </h1>
+                <p>Coming soon...</p>
             </div>
             <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                 <a href="#start">
-                    <img class="to-top" src="../pic/top-arrow_square.ico">
+                    <img class="to-top" src="./pic/top-arrow_square.ico">
                 </a>
             </div>
         </main>
@@ -72,19 +66,19 @@
                 <ul class="footer-contact">
                     <li class="contact-email">
                         <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                        <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
+                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
                         <p class="text-email">  Email </p> 
                         </a>
                     </li>
                     <li class="contact-twitter">
                         <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                        <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
                         <p class="text-twitter"> Twitter </p>
                         </a>
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
+                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
@@ -96,4 +90,3 @@
 
   </body>
 </html>
-
