--- a/fairyland.html
+++ b/fairyland.html
@@ -12,52 +12,10 @@
         <meta property="og:title" content="Zhiyin's Fairyland" />
         <meta property="og:type" content="website" />    
         
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> //fireworks
-        
         <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="./css/index.css">
         <script src="./js/csi.js" defer></script>
-        <style>
-            body {
-            margin: 0;
-            background-image: url("background_dark.png");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            }
-
-            #container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            }
-
-            button {
-            position: fixed;
-            bottom: 20px;
-            padding: 10px 20px;
-            font-size: 1em;
-            background-color: #000;
-            color: #fff;
-            border: 1px solid #fff;
-            cursor: pointer;
-            }
-
-            canvas {
-            position: absolute;
-            text-align: center;
-            top: 0;
-            height: 50%;
-            }
-        </style>
     </head>
 
     <body class="site-fl">
@@ -67,172 +25,10 @@
             <main class="site-fl-main">
                 <div id="start" class="site-fl-content">          
                     <h1 class="site-title"> Fairyland </h1>
-                        <div id="container">
-                            <canvas id="fireworksCanvas"></canvas>
-                        </div>
-                        <button id="wishButton">Make a wish!</button>
-                        <script>
-                            const canvas = document.getElementById("fireworksCanvas");
-                            const ctx = canvas.getContext("2d");
-                            const wishButton = document.getElementById("wishButton");
-                            let fireworks = [];
-
-                            canvas.width = window.innerWidth;
-                            canvas.height = window.innerHeight;
-
-                            function resizeCanvas() {
-                            canvas.width = window.innerWidth;
-                            canvas.height = window.innerHeight;
-                            }
-
-                            class Particle {
-                                constructor(x, y, color, speed, angle) {
-                                    this.x = x;
-                                    this.y = y;
-                                    this.color = color;
-                                    this.vx = speed * Math.cos(angle);
-                                    this.vy = speed * Math.sin(angle);
-                                    this.alpha = 1;
-                                    this.size = Math.random() * 2 + 1.5; // Decrease the size range of the particles
-                                    this.lifetime = 60; // Add a lifetime property (in frames)
-                                    this.decay = 1 / this.lifetime; // Calculate the decay rate based on the lifetime
-                                }
-
-
-                                draw() {
-                                    ctx.globalAlpha = this.alpha;
-                                    ctx.fillStyle = this.color;
-                                    ctx.beginPath();
-                                    ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                                    ctx.fill();
-                                }
-
-                                update() {
-                                    this.x += this.vx;
-                                    this.y += this.vy;
-                                    this.vy += 0.02; //0.02
-                                    //this.alpha -= 0.02;
-                                    this.alpha -= this.decay; // Decrease the alpha value based on the decay rate
-                                    this.lifetime--; // Decrease the lifetime
-                                    this.draw();
-                                }
-                            }
-
-                            class Firework {
-                            constructor(startX, startY, targetX, targetY, color, message) {
-                                this.startX = startX;
-                                this.startY = startY;
-                                this.targetX = targetX;
-                                this.targetY = targetY;
-                                this.color = color;
-                                this.particles = [];
-                                this.progress = 0;
-                                this.speed = 0.05;
-                                this.angle = Math.atan2(targetY - startY, targetX - startX);
-                                this.distanceToTarget = Math.sqrt((targetX - startX) ** 2 + (targetY - startY) ** 2);
-                                this.distanceTraveled = 0;
-                                this.message = message;
-                            }
-
-                            createParticles() {
-                                for (let i = 0; i < 5; i++) {
-                                const angle = Math.random() * Math.PI * 2;
-                                const speed = Math.random() * 1.5 + 1;
-                                this.particles.push(new Particle(this.targetX, this.targetY, this.color, speed, angle));
-                                }
-                            }
-
-                            update() {
-                                this.distanceTraveled = this.progress * this.distanceToTarget;
-                                if (this.distanceTraveled >= this.distanceToTarget) {
-                                this.createParticles();
-                                this.particles.forEach((particle, index) => {
-                                    particle.update();
-                                    if (particle.alpha <= 0) {
-                                    this.particles.splice(index, 1);
-                                    }
-                                });
-                                } else {
-                                this.progress += this.speed;
-                                this.x = this.startX + (this.targetX - this.startX) * this.progress;
-                                this.y = this.startY + (this.targetY - this.startY) * this.progress - 0.5 * 9.81 * (this.progress ** 2);
-                                this.draw();
-                                }
-                                if (this.message) {
-                                ctx.font = "50px Arial";
-                                ctx.fillStyle = this.color;
-                                ctx.fillText(this.message, canvas.width / 2 - 100, canvas.height * 2 / 3);
-                                }
-                            }
-
-                            draw() {
-                                ctx.globalAlpha = 1;
-                                ctx.fillStyle = this.color;
-                                ctx.beginPath();
-                                ctx.arc(this.x, this.y, 1, 0, Math.PI * 2); // Reduce the size of the firework launcher
-                                ctx.fill();
-                            }
-                            }
-
-                            function createFireworks() {
-                            const colors = ["violet", "indigo"]; <!--, "blue", "green", "yellow", "orange", "red"-->
-                            const angleStep = (Math.PI * 2) / 20;
-
-                            for (let i = 0; i < 20; i++) { // Reduce the number of particles generated
-                                const color = colors[i % colors.length];
-                                const startX = canvas.width / 2;
-                                const startY = canvas.height * (9 / 10);
-                                const targetX = canvas.width / 2 + Math.cos(angleStep * i) * (150 + Math.random() * 200);
-                                const targetY = canvas.height * (6 / 10) + Math.sin(angleStep * i) * (100 + Math.random() * 200);
-
-                                setTimeout(() => {
-                                fireworks.push(new Firework(startX, startY, targetX, targetY, color));
-                                if (i === 5) {
-                                    fireworks.push(new Firework(startX, startY, targetX, targetY, "yellow", "琳，生日快乐!"));
-                                    }
-                                    }, i * (300 + Math.random() * 1000)); // Increase the multiplier here (e.g., from 150 to 300)
-                                }
-                            }
-
-                            //let animationId;
-
-                            function animate() {
-                                ctx.globalAlpha = 1;
-                                ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-                                ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-                                fireworks.forEach((firework, index) => {
-                                    firework.update();
-                                    firework.particles.forEach((particle, pIndex) => {
-                                        if (particle.lifetime <= 0) {
-                                            firework.particles.splice(pIndex, 1);
-                                        }
-                                    });
-
-                                    if (firework.particles.length === 0 && firework.distanceTraveled >= firework.distanceToTarget) {
-                                    setTimeout(() => {
-                                        fireworks.splice(index, 1);
-                                    }, 3000); // 3 seconds delay for each firework to disappear
-                                    }
-                                });
-
-                                animationId = requestAnimationFrame(animate);
-                                }
-
-                            //let isAnimating = false; // Add a flag to check if the animation is running
-
-                            wishButton.addEventListener("click", () => {
-                            //if (isAnimating) return; // Prevent running multiple animations simultaneously
-                            //isAnimating = true; // Set the flag to indicate the animation is running
-                            createFireworks();
-                            animate();
-                            //setTimeout(() => {
-                            //    cancelAnimationFrame(animationId);
-                            //    ctx.clearRect(0, 0, canvas.width, canvas.height);
-                            //    isAnimating = false; // Reset the flag after the animation is complete
-                            //}, 14000); // 8 seconds timeout
-                            });
-                        </script>
+                        <p>Make a wish   
+                            <a class="card-title" href="knowledgebase/computational_linguistics.html">here</a>
+                            , you lovely one.
+                        </p>
                 </div>
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                     <a href="#start">
